infra/manifests/vps/bell.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bell
---
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: bell
  namespace: bell
  labels:
    app: bell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bell
  strategy:
    type: Recreate
  template:
    metadata:
      name: bell
      labels:
        app: bell
    spec:
      containers:
      - image: "ghcr.io/nicolaschan/bell:v4.12.3"
        name: bell
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: "/bell/schedules"
          name: schedules-volume
      volumes:
      - name: schedules-volume
        persistentVolumeClaim:
          claimName: schedules
          readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: bell
  namespace: bell
  labels:
    app: bell
  annotations:
    "traefik.ingress.kubernetes.io/service.serversscheme": h2c
spec:
  selector:
    app: bell
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: bell
  namespace: bell
  annotations:
    "cert-manager.io/cluster-issuer": letsencrypt-prod
    "cert-manager.io/private-key-algorithm": ECDSA
    "traefik.ingress.kubernetes.io/router.entrypoints": "web,websecure"
    "traefik.ingress.kubernetes.io/router.middlewares": "default-hsts-middleware@kubernetescrd,default-https-redirect-middleware@kubernetescrd"
spec:
  rules:
  - host: "vps.bell.plus"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: bell
            port:
              number: 8080
  tls:
  - hosts:
    - "vps.bell.plus"
    secretName: bell-cert
